--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation "org.springdoc:springdoc-openapi-ui:1.7.0"
 	implementation "org.springframework.boot:spring-boot-starter-validation"
+	implementation 'org.springframework.security:spring-security-messaging'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
